fixed spacing on home page

--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,21 @@ body {
     background-size: cover;
     background-position: center;
     color: white;
-    width: 80%;
-    max-width: 800px;
+    width: 70%;
     margin: 0 auto;
 }
 
 h1 {
     color: white;
     font-family: 'Sansita Swashed', cursive;
+    margin-top: 60px;
+    margin-bottom: 35px;
+    font-size: 40px;
 }
 
 p {
     font-family: 'Cormorant', serif;
+    font-size: 20px;
 }
 
 #btnQuote, #btnToggle {
@@ -63,6 +66,7 @@ a {
     display: inline-block;
     width: 19.5%;
     margin-right: 0.625%;
+    margin-top: 20px;
     border-radius: 5px;
     text-align: center;
     line-height: 3;
